php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38941 -with-imap doesnt compile anymore after uw-imap update
Submitted: 2006-09-24 15:44 UTC Modified: 2006-09-24 18:06 UTC
From: spam2 at rhsoft dot net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.1.6 OS: Linux Fedora 5
Private report: No CVE-ID: None
 [2006-09-24 15:44 UTC] spam2 at rhsoft dot net
Description:
------------
Since last update from uw-imap with yum on fedora fc5 it seems that php does not compile any more with the extension

php-sources and make-calls are the same, but after i seen the update i decided to compile php again the new version

package: 
uw-imap-devel-2006-2.fc5.1

below the messages from the complier

--

/data/development/src/php/ext/imap/php_imap.c:78: error: conflicting types for 'utf8_mime2text'
/usr/include/imap/utf8.h:546: error: previous declaration of 'utf8_mime2text' was here
make: *** [ext/imap/php_imap.lo] Fehler 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-09-24 18:06 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC