MFB: Fixed bug #38941 (imap extension does not compile against new version     of the imap library).